# Simple2DEngine

./: .clang-format  .gitignore  .readthedocs.yml  .travis.yml  CMakeLists.txt  LICENSE  README.md  README.rst
demo/: CMakeLists.txt
demo/simple_demo/: CMakeLists.txt
demo/simple_demo/src/: GameScene.cpp  GameScene.h  GridElementNode.cpp  GridElementNode.h  GridNode.cpp  GridNode.h  main.cpp
doc/: CMakeLists.txt  Doxyfile.in
doc/doxygen/: Doxyfile.in
docs/: CMakeLists.txt  README.rst  conf.py  index.rst  requirements.txt
examples/: CMakeLists.txt
examples/simple_puzzle/: CMakeLists.txt
examples/simple_puzzle/src/: GameScene.cpp  GameScene.h  GridElementNode.cpp  GridElementNode.h  GridNode.cpp  GridNode.h  main.cpp
include/Simple2DEngine/: Engine.hpp
include/Simple2DEngine/scenes/: node.h  scene_manager.h
include/simple2dengine/: configuration.h  engine.h
include/simple2dengine/core/: anchor.h
include/simple2dengine/managers/: asset_manager.h  input_manager.h  scene_manager.h
include/simple2dengine/managers/loaders/: font_loader.h  loader.h  sound_loader.h  texture_loader.h
include/simple2dengine/nodes/: music_node.h  node.h  sound_node.h  sprite.h  sprite_node.h  text_node.h  timer_node.h
include/simple2dengine/nodes/canvas/: canvas_node.h  sprite_node.h  text_node.h
include/simple2dengine/scenes/: node.h  scene_manager.h
src/: CMakeLists.txt  Engine.cpp  engine.cpp
src/managers/: asset_manager.cpp  input_manager.cpp  scene_manager.cpp
src/managers/loaders/: font_loader.cpp  loader.cpp  sound_loader.cpp  texture_loader.cpp
src/nodes/: music_node.cpp  node.cpp  sound_node.cpp  sprite.cpp  sprite_node.cpp  text_node.cpp  timer_node.cpp
src/nodes/canvas/: canvas_node.cpp  sprite_node.cpp  text_node.cpp
src/scenes/: node.cpp  scene_manager.cpp
test/: CMakeLists.txt
test/unittest/: CMakeLists.txt  testmain.cpp
test/unittests/: main.cpp  node_test.cpp
